# Visual-Inertial-Odometry

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/main/: okvis_app_synchronous.cpp
src/okvis_ceres/include/okvis/: Estimator.hpp
src/okvis_ceres/include/okvis/implementation/: Estimator.hpp
src/okvis_ceres/src/: Estimator.cpp  ImuError.cpp  Map.cpp  MarginalizationError.cpp
src/okvis_common/: CMakeLists.txt
src/okvis_common/include/okvis/: FrameTypedefs.hpp
src/okvis_cv/: CMakeLists.txt
src/okvis_frontend/: CMakeLists.txt
src/okvis_frontend/src/: Frontend.cpp  ProbabilisticStereoTriangulator.cpp  VioKeyframeWindowMatchingAlgorithm.cpp
src/okvis_kinematics/: CMakeLists.txt
src/okvis_matcher/: CMakeLists.txt
src/okvis_matcher/include/okvis/implementation/: DenseMatcher.hpp
src/okvis_matcher/src/: DenseMatcher.cpp
src/okvis_multisensor_processing/: CMakeLists.txt
src/okvis_multisensor_processing/src/: FrameSynchronizer.cpp  ImuFrameSynchronizer.cpp  ThreadedKFVio.cpp  VioVisualizer.cpp
src/okvis_time/: CMakeLists.txt
src/okvis_util/: CMakeLists.txt
